# terminal

./: Cargo.toml  text_long.sfd  text_short.sfd
.github/workflows/: rust.yml
src/: basic.rs  image.rs  main.rs  pty.rs  setup.rs  terminal.rs  tff_long.py  tff_short.py  update.rs
